--- a/ToolTest/ToolTest.csproj
+++ b/ToolTest/ToolTest.csproj
@@ -63,7 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Services\Conection.cs" />
-    <Compile Include="Models\ValueObjects\EnemyParam.cs" />
+    <Compile Include="Models\Entity\EnemyParam.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Views\FrmEnemy.cs">
       <SubType>Form</SubType>
@@ -83,7 +83,7 @@
     <Compile Include="Views\Menu.Designer.cs">
       <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\ValueObjects\PlayerParam.cs" />
+    <Compile Include="Models\Entity\PlayerParam.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Views\FrmEnemy.resx">
@@ -112,7 +112,8 @@
     <Content Include="App.Release.config">
       <DependentUpon>App.config</DependentUpon>
       <SubType>Designer</SubType>
-    </Content>    <None Include="packages.config" />
+    </Content>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -126,13 +127,13 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <UsingTask TaskName="TransformXml" AssemblyFile="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\Web\Microsoft.Web.Publishing.Tasks.dll" />
-<Target Name="AfterCompile" Condition="exists('app.$(Configuration).config')">
-  <TransformXml Source="app.config" Destination="$(IntermediateOutputPath)$(TargetFileName).config" Transform="app.$(Configuration).config" />
-  <ItemGroup>
-    <AppConfigWithTargetPath Remove="app.config" />
-    <AppConfigWithTargetPath Include="$(IntermediateOutputPath)$(TargetFileName).config">
-      <TargetPath>$(TargetFileName).config</TargetPath>
-    </AppConfigWithTargetPath>
-  </ItemGroup>
-</Target>
+  <Target Name="AfterCompile" Condition="exists('app.$(Configuration).config')">
+    <TransformXml Source="app.config" Destination="$(IntermediateOutputPath)$(TargetFileName).config" Transform="app.$(Configuration).config" />
+    <ItemGroup>
+      <AppConfigWithTargetPath Remove="app.config" />
+      <AppConfigWithTargetPath Include="$(IntermediateOutputPath)$(TargetFileName).config">
+        <TargetPath>$(TargetFileName).config</TargetPath>
+      </AppConfigWithTargetPath>
+    </ItemGroup>
+  </Target>
 </Project>
